Configure Vercel with serverless API and static CDN serving

--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,14 @@
 {
     "version": 2,
-    "builds": [
+    "outputDirectory": "dist/public",
+    "rewrites": [
         {
-            "src": "dist/index.cjs",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "dist/index.cjs"
+            "source": "/api/(.*)",
+            "destination": "/api/index"
         },
         {
-            "src": "/(.*)",
-            "dest": "dist/index.cjs"
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
